removed unofficial LoPoW suffix

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <p class="text-faded">
 
             <b>Things Forest</b> is growing as we speak, as a spin-off from the
-            iMinds MOSAIC-LoPoW research group at the University of Antwerp.
+            iMinds MOSAIC research group at the University of Antwerp.
 
           </p>
         </div>
